--- a/static/notebook.ipynb
+++ b/static/notebook.ipynb
@@ -8,6 +8,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=3\n",
+    "print(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,7 +61,7 @@
        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~KyleOS/56.embed\" height=\"600px\" width=\"800px\"></iframe>"
       ],
       "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
+        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
      "execution_count": 17,
